--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
 /* MODIFICHE STILE */
+
+.item {
+    border: 1px solid black;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
