--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,8 @@ main {
     align-items: center;
     justify-content: center;
 }
+
+.done{
+    color: red;
+    text-decoration: line-through;
+}
